	* Added the 'rd' user to the 'wheel' group.
2018-11-06 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha04.
2018-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'taglib-devel' package to 'install_rivendell_devel.sh'.
2018-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added blacklist entry for the 'snd-asihpi' module on CentOS 7
	installs.
2018-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha05.
2019-03-08 Fred Gleason <fredg@paravelsystems.com>
	* Changed the ALPHA warning to a BETA warning in 'README'.
	* Replaced the patch to set SeLinux Permissive mode on CentOS 7
	with a complete config file.
2019-03-08 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3beta0.
2019-03-21 Fred Gleason <fredg@paravelsystems.com>
	* Removed the BETA warning.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Added 'centos7/rsyslog.conf.patch'.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed support for RHEL6.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Set the default report editor to gedit(1).
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'centos7/qt_plugins_3.3rc'.
	* Removed 'centos7/qtrc'.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'common/rog-1.3.3.pdf'.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3beta01.
2019-07-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed the download path for the CentOS 7 installation repo.
2019-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.0.
2020-03-13 Fred Gleason <fredg@paravelsystems.com>
	* Added 'libmusicbrainz5-devel', 'libdiscid-devel', 'libcoverart'
	and 'libcoverart-devel' packages to the 'install_rivendell_devel.sh'
	script.
2020-03-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.1.