@@ -2,7 +2,7 @@
 ##
 ##    Rivendell Installation Script
 ##
-##    Copyright (C) 2016  Fred Gleason <fredg@paravelsystems.com>
+##    Copyright (C) 2016-2020  Fred Gleason <fredg@paravelsystems.com>
 ##
 ##    This program is free software; you can redistribute it and/or modify
 ##    it under the terms of version 2 of the GNU General Public License as
@@ -50,6 +50,7 @@ rm -rf $RPM_BUILD_ROOT
 mkdir -p $RPM_BUILD_ROOT/root
 cp centos7/install_rivendell.sh $RPM_BUILD_ROOT/root/
 cp centos7/install_rivendell_devel.sh $RPM_BUILD_ROOT/root/
+cp centos7/install_rivendell_virtserv.sh $RPM_BUILD_ROOT/root/
 
 mkdir -p $RPM_BUILD_ROOT%{_datadir}/rivendell-install
 cp centos7/asihpi.conf $RPM_BUILD_ROOT%{_datadir}/rivendell-install/
@@ -82,6 +83,7 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root)
 /root/install_rivendell.sh
 /root/install_rivendell_devel.sh
+/root/install_rivendell_virtserv.sh
 %{_datadir}/rivendell-install/*
 
 
